# battle-grid

./: README.md  index.html  main.py  pyproject.toml  styles.css
static/: styles.css
templates/: base.jinja  board.jinja  index.jinja
