[tool.poetry]
name = "battle-grid"
version = "0.1.0"
description = "A Multiplayer Tic-Tac-Toe game"
authors = ["Advik <adviksingh6632@gmail.com>"]
readme = "README.md"
packages = [{include = "battle_grid"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
sse-starlette = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
